# c-fit-llm-python-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
.github/ISSUE_TEMPLATE/: 🛠️feature.md
.github/config/: deploy.env
.github/workflows/: CICD-PYTHON-FASTAPI.yml  ci-image.yml
agent/: workflow.py
agent/modules/: chains.py  conditions.py  main.py  nodes.py  prompts.py  states.py
agent/utils/: functions.py
src/: main.py  server.py
src/agent/: workflow.py
src/agent/modules/: chains.py  models.py  nodes.py  prompts.py  states.py
src/agent/utils/: base_node.py
src/api/: analyze_router.py  auth_router.py  dependencies.py  oneclick_router.py  process_router.py
src/core/: auth.py  config.py  db.py  security.py
src/crud/: user.py
src/database/: session.py
src/models/: user.py
src/preprocess/: pdf_loader.py  url_loader.py
src/schemas/: user.py
src/services/: analyze_services.py  oneclick_services.py  process_services.py
