[project]
name = "c-fit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "h11==0.16.0",
    "httptools==0.6.4",
    "json-repair>=0.50.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.36.0",
]
